# EchoScribe

./: .gitignore  README.md  pubspec.yaml  wisenote_readme.md
android/app/: build.gradle.kts
flutter_app_local_ASR/: .gitignore  ASR_STATUS.md  Design.md  pubspec.yaml
flutter_app_local_ASR/android/app/: build.gradle.kts
flutter_app_local_ASR/android/app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
flutter_app_local_ASR/assets/models/: README.md
flutter_app_local_ASR/assets/templates/: meeting_summary_business_zh.md  meeting_summary_zh.md
flutter_app_local_ASR/ios/: Podfile
flutter_app_local_ASR/ios/Runner/: AppDelegate.swift  Info.plist  SignEmbeddedFrameworks.sh
flutter_app_local_ASR/ios/Runner.xcodeproj/: project.pbxproj
flutter_app_local_ASR/lib/: main.dart
flutter_app_local_ASR/lib/asr/: asr_engine.dart  audio_utils.dart  fallback_asr_service.dart  model_store.dart  moonshine_asr_engine.dart  partial_preview.dart  sense_voice_file_transcriber.dart  (+3 more)
flutter_app_local_ASR/test/: audio_utils_test.dart  partial_preview_test.dart  pcm16_wav_io_test.dart  recording_session_test.dart  sense_voice_file_transcriber_test.dart  widget_test.dart
flutter_app_local_ASR/tool/: download_moonshine_tiny_streaming.dart  download_sherpa_speaker_models.dart  verify_offline_bundle.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: api_config.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb  l10n_extensions.dart
test/: widget_test.dart
(+49 files in other folders)
